[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ExposoGraph"
version = "0.0.3"
description = "ExposoGraph — LLM-powered extraction and manual curation of carcinogen metabolism pathways"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Data analysis team @ KaziLab", email = "exposograph@kazilab.se" },
]
keywords = [
    "knowledge-graph",
    "carcinogen",
    "pharmacogenomics",
    "metabolism",
    "toxicology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "networkx>=3.2",
    "pydantic>=2.5",
    "pyjson5>=2.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.60.0",
]
ollama = [
    "requests>=2.31",
]
db = [
    "requests>=2.31",
]
streamlit = [
    "streamlit>=1.40.0",
    "streamlit-agraph>=0.0.45",
    "ExposoGraph[llm]",
]
viewer = [
    "dash>=4.0",
    "dash-cytoscape>=1.0",
]
notebook = [
    "jupyter",
    "matplotlib>=3.8",
    "plotly>=6.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "sphinx>=8.2.0",
    "myst-parser>=4.0.0",
    "furo>=2024.8.6",
]
all = [
    "ExposoGraph[llm,ollama,db,streamlit,viewer,notebook,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/kazilab/ExposoGraph"
Repository = "https://github.com/kazilab/ExposoGraph"
Issues = "https://github.com/kazilab/ExposoGraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["ExposoGraph"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "streamlit_agraph.*",
    "pyvis.*",
    "networkx.*",
    "pyjson5.*",
    "openai.*",
    "requests.*",
    "dash.*",
    "dash_cytoscape.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ExposoGraph.app",
    "ExposoGraph._app_shared",
    "ExposoGraph.ui_sidebar",
    "ExposoGraph.ui_extract",
    "ExposoGraph.ui_manual",
    "ExposoGraph.ui_preview",
    "ExposoGraph.ui_data",
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=ExposoGraph",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]

[tool.coverage.run]
omit = [
    "ExposoGraph/app.py",
    "ExposoGraph/_app_shared.py",
    "ExposoGraph/ui_*.py",
]
